@@ -3935,6 +3935,11 @@ struct AnnoyingZoneUnknown_Struct {
 	uint32	value;		//always 4
 };
 
+struct LoadSpellSet_Struct {
+      uint32  spell[MAX_PP_MEMSPELL];      // 0xFFFFFFFF if no action, slot number if to unmem starting at 0
+      uint32 unknown;	//there seems to be an extra field in this packet...
+};
+
 struct BlockedBuffs_Struct {
 /*000*/	uint8	unknown000[80];
 /*080*/	uint8	unknown081;
