@@ -1,5 +1,9 @@
 ﻿EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
+==04/08/2010==
+Derision: SoD - Tracking Auto-refresh should no longer fail with Recovery timer not met.
+Derision: SoD - Previously memmed spells are now unmemmed when loading a spell set.
+
 ==04/06/2010==
 Derision: SoD - Players may now be tracked and fixed a bug where tracking would not work when switching tracking targets without cancelling tracking.
 Derision: SoD - Initial work on /hidecorpse serverside support. All but /hidecorpse looted should work.
